--- a/css/styles.css
+++ b/css/styles.css
@@ -213,7 +213,8 @@ box-sizing: border-box;
     }
 
     #bio-container {
-        min-height: auto;
+        width: 390px;
+        max-height: auto;
         border-right: none;
         border-bottom: 10px solid var(--bio-border-color);
     }
@@ -223,11 +224,13 @@ box-sizing: border-box;
     }
 
     #bio-container p {
+        width: 390px;
         max-width: 100%;
         margin: 10px auto;
     }
 
     #about-container {
+        width: 390px;
         text-align: center;
         padding: 30px;
     }
