--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ box-sizing: border-box;
 }
 
 #bio-container {
-    flex: 1 1 0 20%;
+    flex: 1 1 0 auto;
     width: 19%;
     background-color: var(--bio-bg-color);
     text-align: center;
@@ -206,15 +206,15 @@ box-sizing: border-box;
 
 
 /* Mobile */
-@media(max-width: 450px) {
-
+@media(max-width: 543px) {
+/* div Lado esquerdo */
     #container{
         flex-direction: column;
     }
 
     #bio-container {
-        width: 390px;
-        max-height: auto;
+        width: 100%;
+        max-height: 100%;
         border-right: none;
         border-bottom: 10px solid var(--bio-border-color);
     }
@@ -224,13 +224,12 @@ box-sizing: border-box;
     }
 
     #bio-container p {
-        width: 390px;
-        max-width: 100%;
+        max-width: 60%;
         margin: 10px auto;
     }
-
+/* div Lado direito */
     #about-container {
-        width: 390px;
+        width: 100%;
         text-align: center;
         padding: 30px;
     }
